<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reminder_card"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:theme="@style/NaturalTriggerViewTheme"
    android:visibility="visible"
    app:cardBackgroundColor="@color/green_800"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent"
    tools:showIn="@layout/activity_natural_trigger_tabs">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.leo.smartTrigger.datacollector.ui.uiElements.CheckableImageView
            android:id="@+id/activity1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/geofenceIcon"
            app:layout_constraintStart_toEndOf="@+id/geofenceDirection"
            app:layout_constraintTop_toTopOf="@+id/geofenceIcon"
            tools:src="@drawable/ic_directions_walk_white_48dp" />

        <de.leo.smartTrigger.datacollector.ui.uiElements.CheckableImageView
            android:id="@+id/activity2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/geofenceIcon"
            app:layout_constraintStart_toEndOf="@+id/activity1"
            app:layout_constraintTop_toTopOf="@+id/geofenceIcon"
            tools:src="@drawable/ic_directions_car_white_48dp" />

        <de.leo.smartTrigger.datacollector.ui.uiElements.CheckableImageView
            android:id="@+id/geofenceDirection"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/geofenceIcon"
            app:layout_constraintStart_toEndOf="@+id/geofenceIcon"
            tools:src="@drawable/ic_exit_geofence_fat_arrow_white" />

        <de.leo.smartTrigger.datacollector.ui.uiElements.CheckableImageView
            android:id="@+id/activity3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/geofenceIcon"
            app:layout_constraintStart_toEndOf="@+id/activity2"
            app:layout_constraintTop_toTopOf="@+id/geofenceIcon"
            tools:src="@drawable/ic_directions_bus_white_48dp" />

        <TextView
            android:id="@+id/geofenceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="GeofenceName" />

        <de.leo.smartTrigger.datacollector.ui.uiElements.CheckableImageView
            android:id="@+id/geofenceIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geofenceName"
            tools:src="@drawable/ic_home_white_48dp" />

        <TextView
            android:id="@+id/timeView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/geofenceIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/geofenceIcon"
            tools:text="00:00-\n23:59" />

        <TextView
            android:id="@+id/spendTimeGeofence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="300"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/geofenceDirection"
            app:layout_constraintStart_toEndOf="@+id/geofenceDirection"
            app:layout_constraintTop_toTopOf="@+id/geofenceDirection"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/spendTimeActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="300"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/activity2"
            app:layout_constraintStart_toStartOf="@+id/activity2"
            app:layout_constraintTop_toTopOf="@+id/activity1"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


    