...
            android:text="Zurück"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/next_page"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="Weiter"
...
